# goalana

./: .env.devnet.example  .env.example  .env.production.example  .gitignore  README.md  RISKS.md  SETUP.md  deploy.sh  final-features.md  fixes.md  package.json  response.txt  todo.md  turbo.json  v2-todo.md  v3-todo.md
apps/api/: README.md  package.json  test-odds2.ts
apps/api/src/: index.ts
apps/api/src/config/: competition.ts
apps/api/src/crons/: fixtures.cron.ts  lifecycle.cron.ts  market.cron.ts  (+1 more)
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: header.tsx  judging-window-banner.tsx  market-status-badge.tsx  mode-toggle.tsx  team-badge.tsx  txline-health-indicator.tsx  wallet-button.tsx
apps/web/hooks/: use-goalana-program.ts  use-inspector-data.ts  use-liquidity-data.ts  use-market-account.ts  use-market-meta.ts  use-market-positions.ts  use-now.ts  use-position-account.ts  use-position-by-pda.ts  use-smart-polling.ts  use-wallet-positions.ts
apps/web/lib/: axios-instance.ts  market-groups.ts  match-status.ts  merkle-verify.ts  position-status.ts  protocol.ts  server-api.ts  site.ts  solana-explorer.ts  team-flags.ts  time.ts
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  RISKS.md  SETUP.md  TECHNICAL_DOCUMENTATION.md
goalana_program/: Anchor.toml  README.md  package.json  tsconfig.json
goalana_program/programs/goalana_program/: Cargo.toml
goalana_program/programs/txoracle_mock/: Cargo.toml
goalana_program/programs/txoracle_mock/src/: lib.rs
goalana_program/tests/: index.ts
(+108 files in other folders)
